--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
   <title>Blog Jatziri Ramírez</title>
 </head>
 <body>
-  <p>
-Setup <br>
-<br>
-    1. Google Chrome <br>
-    2. Visual Studio Code <br>
-    3. Figma <br>
-    4. GitHub <br>
-  </p>
-<p>
-Conceptos esenciales del desarrollo Web <br>
-<br><br>
-  1. Qué es HTML <br>
-  2. Etiquetas <br>
-  3. DOM <br>
-  4. Semántica <br>
-  5. Atributos <br>
-  6. Qué es CSS <br>
+<details>
+<summary>
+  Setup 
+</summary>
 
-</p>
+<ol>
+  <a href="#Google-chrome"></href> 1. Google Chrome <br></a>
+  <a href="#Visual-Code"></href> 2. Visual Studio Code</a><br>
+  <a href="#Figma"></href> 3. Figma </a><br>
+  <a href="#GitHub"></href>4. GitHub </a><br>   
+    </ol> 
+</details>
+
+<details>
+  <summary>
+    Conceptos esenciales del desarrollo Web
+  </summary>
+  <ol>
+    <a href="#HTML"></href>1. Qué es HTML </a><br>
+    <a href="#Etiquetas"></href>  2. Etiquetas </a><br>
+    <a href="#DOM"></href> 3. DOM </a><br>
+    <a href="#Semántica"></href>4. Semántica </a><br>
+    <a href="#Atributos"></href> 5. Atributos </a><br>
+    <a href="#CSS"></href> 6. Qué es CSS </a><br>
+    </ol>
+</details>
 <h1>
   Curso esencial de HTML y CSS
 </h1>
@@ -35,14 +42,14 @@ Conceptos esenciales del desarrollo Web <br>
 </p>
 <h2>Setup</h2>
 <img src="Imagenes/Lchrome.png" alt="Logo de Google Chrome" title="Logo de Chrome"></img>
-<h3>1.Google Chrome</h3>
+<h3 id="Google-chrome"> 1.Google Chrome </h3>
 <p>
   Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
   desarrollo avanzadas y de amigable uso.
 </p>
 
   <img src="Imagenes/Visual code.png" alt="Logo de Visual" title="Logo Visual">
-  <h3>2.Visual Studio Code</h3>
+  <h3 id="Visual-Code">2.Visual Studio Code</h3>
   <p>
     Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
     extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
@@ -50,14 +57,14 @@ Conceptos esenciales del desarrollo Web <br>
   </p>
 
   <img src="Imagenes/Figma.png" alt="Logo de Figma" title="Logo Figma">
-  <h3>3.Figma</h3>
+  <h3 id="Figma"> 3.Figma</h3>
   <p>
     Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
     implementación por su fácil uso porque puede ser usado directamente desde el navegador.
   </p>
 
   <img src="Imagenes/GitHub.png" alt="Logo de GitHub" title="Logo GitHub">
-  <h3>4.Github</h3>
+  <h3 id="GitHub">4.Github</h3>
   <p>
     Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el
     mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de
@@ -71,14 +78,14 @@ Conceptos esenciales del desarrollo Web <br>
     Conceptos esenciales del Desarrollo Web
   </h1>
   <p>
-    <h3>1. HTML</h3>
+    <h3 id="HTML">1. HTML</h3>
     Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado
     y la estructura del contenido.
   </p>
   <img src="Imagenes/HTML imagen.png" alt="Tabla html" title="Tabla html">
 <br><br>
   <p>
-  <h3>2. Etiquetas</h3>
+  <h3 id="Etiquetas">2. Etiquetas</h3>
     Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene
     características y usos diferentes aunque visualmente den un resultado similar.
     <br><br>
@@ -89,7 +96,7 @@ Conceptos esenciales del desarrollo Web <br>
   </p>
   <br>
   <p>
-  <h3>3. DOM</h3>
+  <h3 id="DOM">3. DOM</h3>
     El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
     genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
     dependencias, herencias en css y que tan complejo es nuestro proyecto.
@@ -97,7 +104,7 @@ Conceptos esenciales del desarrollo Web <br>
   <img src="Imagenes/Dom.png" alt="Tabla DOM" title="Tabla DOM" width="900px">
   <br><br>
  
-  <h3>4. SEMATICA</h3>
+  <h3 id="Semántica">4. SEMÁNTICA</h3>
   La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y no deben 
   significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más relevantes que otras,
    esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido, categorizar y será la herramientas más 
@@ -105,10 +112,10 @@ Conceptos esenciales del desarrollo Web <br>
    con habilidades diferentes puedan entender cada contenido.
 <br>
  
-<h3>5. ATRIBUTOS</h3>
+<h3 id="Atributos">5. ATRIBUTOS</h3>
 Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el navegador, 
 algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src
-<h3>6. CSS</h3>
+<h3 id="CSS">6. CSS</h3>
 Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir la presentación de documentos HTML
 <img src="Imagenes/CSS.png" alt="CSS" title="CSS">
 <br>
@@ -133,6 +140,10 @@ Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el leng
         <li type="disc">Border / Bordes</li>
         <li type="disc">Margin / Márgenes</li>
       </ol></p>
-      
+    
+      <p>
+        Si tienes alguna pregunta, escríbeme a
+        <a href="mailto:jatziriramirezb6_10@dgb.email">jatziriramirezb6_10@dgb.email</href></a>
+      </p>
 </body>
 </html>
